Fix FAQ buttons vertical spacing on small screens

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ input {
 .btn-content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     max-width: 55%;
     margin: 0 auto;
     margin-bottom: .5rem;
